--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-20 version 0.4.5:
+
+  * Fix memory leak when client is disconnected before sending back results
+
 2014-09-29 version 0.4.4:
 
   * Fix behavior when ::accept is failed
